2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Factor object_class_print and echo, remove dubious char* usage.
	* src/object/object-class.cc: Here.

2008-01-15  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a deprecated file.
	* src/uast.hh: Remove.
	* src/Makefile.am: Adjust.

2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Add documentation following today's discussions.
	* doc/semantics-issues.org: Update documentation.

2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Factor code.
	* src/uobject.cc: Factor split_name.

2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Remove Inherits/Disinherits in yaml.
	* src/ast/ast.yml: Remove Inherits/Disinherits.

2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Remove obsolete inherits/disinherits.
	* share/urbi/urbi.u: Use addProto instead of inherits.
	* src/parser/ugrammar.y: Remove inherits / disinherits.
	* src/parser/utoken.l: Ditto.

2008-01-14  Samuel Tardieu  <tardieu@gostai.com>

	Use a name unavailable to the user for temporary purpose.
	* src/parser/ugrammar.y: The user cannot enter 'res' so use it.

2008-01-11  Samuel Tardieu  <tardieu@gostai.com>

	Notes on "nil" object.
	* doc/semantics-issues.org: Notes on "nil" object.

2008-01-11  Samuel Tardieu  <tardieu@gostai.com>

	Declare true and false in Urbi.
	* share/urbi/urbi.u: Declare "true" and "false".
	* src/parser/ugrammar.y: Do not handle "true" and "false" specially.
	* src/parser/utoken.l: Ditto.

2008-01-11  Samuel Tardieu  <tardieu@gostai.com>

	More semantic issues and questions.
	* doc/semantics-issues.org: Update document.

2008-01-11  Loic Fosse  <fosse@gostai.com>

	Fix location handling in Nary.
	* src/ast/ast.yml: Here.

2008-01-11  Akim Demaille  <demaille@gostai.com>

	Remove flavorable.hh.
	* src/flavorable.hh: Remove, unused.
	* src/Makefile.am, src/parser/uparser.hh: Adjust.

2008-01-10  Akim Demaille  <demaille@gostai.com>

	s/arent/roto.
	* share/urbi/urbi.u, src/object/atom.hh, src/object/atom.hxx,